<resources>
    <string name="app_name">SPICE</string>
    <string name="loading">loading.....</string>
    <string name="welcome">Welcome</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_place_holder">Enter Email</string>
    <string name="password_place_holder">Enter Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="email_cannot_be_empty">Please enter email.</string>
    <string name="password_cannot_be_empty">Please enter password.</string>
    <string name="email_invalid">Please enter a valid email.</string>
    <string name="offline_login_message">You does not have internet to connect our system.Though you can login offline for offline features.Do you wish to continue?</string>
    <string name="incorrect_username_password">Incorrect email or password</string>
    <string name="fp_forgotPassword">Forgot Password</string>
    <string name="fp_submit">Submit</string>
    <string name="fp_login">Go back to Login</string>
    <string name="no_sites_associated">No sites assigned to this user. Please contact admin.</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="pluse">Pulse (BPM)</string>
    <string name="next">Next</string>
    <string name="bp_check_instructions">Blood Pressure Measurement Instructions</string>
    <string name="blood_pressure_instructions">Blood Pressure Measurement Instructions</string>
    <string name="sys">Sys</string>
    <string name="dis">Dia</string>
    <string name="reading_nno">Reading\nNo.</string>
    <string name="systolic_mmhg">Systolic\n(mmHg)</string>
    <string name="diastolic_mmhg">Diastolic\n(mmHg)</string>
    <string name="pulse_n_bpm">Pulse\n(BPM)</string>
    <string name="string_1">1</string>
    <string name="string_2">2</string>
    <string name="string_3">3</string>
    <string name="sugar_append">%1$.0f mmHg</string>
    <string name="pulse_append">%1$.0f BPM</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="age_in_years">Age (in years)</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="skip">SKIP</string>
    <string name="hr">Hrs</string>
    <string name="min">Mins</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="pulse">Pulse</string>
    <string name="ic_add_medication">add</string>
    <string name="logo_description">Medtronic Logo</string>
    <string name="arrow_back">Back</string>
    <string name="arrow_home">Home</string>
    <string name="close">Close</string>
    <string name="selected">Selected</string>
    <string name="profile">Profile</string>
    <string name="home_burger">Home Burger</string>
    <string name="enter_the_age">Enter the Age</string>
    <string name="choose_site">Change Facility</string>
    <string name="my_activities">My Activities</string>
    <string name="not_at_all">Not\nat all</string>
    <string name="several_days">Several\nDays</string>
    <string name="more_than_half_day">More than\nhalf the days</string>
    <string name="nearly_every_day">Nearly\nEveryDay</string>
    <string name="screening_catagory">Screening Category</string>
    <string name="clinic">Facility</string>
    <string name="camp">Camp</string>
    <string name="community">Community</string>
    <string name="door_to_door">Door to Door</string>
    <string name="general_details_label">Screened participants will be linked to the site:</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="no_location_text">No current location</string>
    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="hide">Hide</string>
    <string name="data_sync_started">Data sync started</string>
    <string name="people_screened">Screened</string>
    <string name="people_referred">Referred</string>
    <string name="screening_category">Screening Category</string>
    <string name="screen_next_patient">Screen Patient</string>
    <string name="today_s_stats">Today’s Screening Stats</string>
    <string name="zero_label">0</string>
    <string name="enter_your_initials">Enter Your Initial</string>
    <string name="patient_initial">Patient’s Initial</string>
    <string name="terms_condition_info_screening"><![CDATA[The healthcare worker will be accepting the terms & conditions on behalf of the screening participant.]]></string>
    <string name="terms_condition_info_enrollment"><![CDATA[The healthcare worker will be accepting the terms & conditions on behalf of the enrollment participant.]]></string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
    <string name="accept_terms_condition"><![CDATA[Accept Terms & Conditions]]></string>
    <string name="choose_option">Select option</string>
    <string name="please_select" translatable="false">--Select--</string>
    <string name="result">Result</string>
    <string name="done">Done</string>
    <string name="confirm">Confirm</string>
    <string name="last_refill_date">Last Refill Date</string>
    <string name="national_id">National ID</string>
    <string name="prescriber_number">Prescriber\'s Number</string>
    <string name="prescriber">Prescriber</string>
    <string name="national_id_program_id">National ID/Program ID</string>
    <string name="general_min_validation">Entered value should be greater than %1$s</string>
    <string name="general_max_validation">Entered value should be lesser than %1$s</string>
    <string name="general_min_max_validation">Entered value should be %1$s to %2$s</string>
    <string name="min_char_length_validation">Minimum %1$s characters required</string>
    <string name="bio_data">Bio Data</string>
    <string name="age">Age</string>
    <string name="default_user_input_error">Please enter a valid value</string>
    <string name="please_check_your_inputs">Please check your inputs</string>
    <string name="sno_2">2</string>
    <string name="sno_3">3</string>
    <string name="sno_1">1</string>
    <string name="bmi">BMI</string>
    <string name="average_mmhg" translatable="false">%1$d/%2$d mmHg</string>
    <string name="average_mmhg_string" translatable="false">%1$s/%2$s mmHg</string>
    <string name="screening_summary">Screening Summary</string>
    <string name="enrollment_summary">Enrollment Summary</string>
    <string name="average_blood_pressure">Average Blood Pressure</string>
    <string name="screening">Screening</string>
    <string name="bp_check_instructions_line_breaking">Blood Pressure \nMeasurement Instructions</string>
    <string name="screening_type">Department/Screening Type</string>
    <string name="no_assessment_required">No Assessment required</string>
    <string name="phq4_score">PHQ 4 Score</string>
    <string name="referred_for_nfurther_assessment">Referred for\nFurther Assessment</string>
    <string name="bp_measure">While measuring blood pressure:</string>
    <string name="facility_referred_to">Nearest Facility Referred to</string>
    <string name="average_bp_">Average BP</string>
    <string name="average_bp" translatable="false">%1$d/%2$d</string>
    <string name="assessment">"Assessment"</string>
    <string name="systolic_diastolic_min_validation">Systolic and Diastolic value should be greater than %1$s</string>
    <string name="systolic_diastolic_max_validation">Systolic and Diastolic values should be lesser than %1$s</string>
    <string name="systolic_greater_than_diastolic">The Systolic value entered should always be greater than Diastolic value.</string>
    <string name="pulse_min_validation">Pulse values should be greater than %1$s</string>
    <string name="pulse_max_validation">Pulse values should be lesser than %1$s</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="blood_glucose">Blood Glucose</string>
    <string name="blood_glucose_with_unit">Blood Glucose (mg/dL)</string>
    <string name="hba1c">HbA1c (mmol/mo)</string>
    <string name="time_last_meal">Time of Last Meal</string>
    <string name="enrollment">Enrollment</string>
    <string name="enter_bool_glucose_reading">Enter Glucose Reading</string>
    <string name="enter_hbA1c_reading">Enter HbA1c Reading</string>
    <string name="enter_national_id">Enter National ID</string>
    <string name="name">Name</string>
    <string name="dob_age">Age</string>
    <string name="gender">Gender</string>
    <string name="date_of_enrollment">Date of Enrollment</string>
    <string name="program_id">Program ID</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="facility_name">Facility Name</string>
    <string name="blood_glucose_rbs">Blood Glucose (RBS)</string>
    <string name="average_bp_text">Average Blood Pressure</string>
    <string name="treatment_plan">Treatment Plan</string>
    <string name="treatment_plan_caps">TREATMENT PLAN</string>
    <string name="medical_review_frequency">Medical Review Frequency</string>
    <string name="bp_check_frequency">"Blood Pressure Check Frequency"</string>
    <string name="target_bp">Target BP</string>
    <string name="bg_check_frequency">Blood Glucose Check Frequency</string>
    <string name="mental_health_check_frequency">Mental Health Check Frequency</string>
    <string name="hba1c_check_frequency">HbA1c Check Frequency</string>
    <string name="diabetic_foot_check_frequency">Diabetic Foot Check Frequency</string>
    <string name="antenatal_frequency">Antenatal Frequency</string>
    <string name="cvd_risk_level">CVD Risk Level</string>
    <string name="diagnosis">Diagnoses</string>
    <string name="dot">•</string>
    <string name="separator_hyphen">-</string>
    <string name="separator_character">/</string>
    <string name="ncd_access_location">This app is accessing your location in background.</string>
    <string name="gps_enabled">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="assessment_summary">Assessment Summary</string>
    <string name="bg_with_type">Blood Glucose (%1$s)</string>
    <string name="enter_name">Enter Name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="logout">Logout</string>
    <string name="app_version">Version</string>
    <string name="pregnancy_details">Pregnancy Details</string>
    <string name="confirm_diagnoses">Confirm Diagnoses</string>
    <string name="save">Save</string>
    <string name="prescribe">Prescribe</string>
    <string name="change_facility">Change Facility</string>
    <string name="Other">Other</string>
    <string name="type_your_comments">Type your comments</string>
    <string name="opd_triage">Triage</string>
    <string name="outpatient">Outpatient</string>
    <string name="inpatient">Inpatient</string>
    <string name="offline_data">Offline Data</string>
    <string name="height">Height</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="enter_feet">Enter Feet</string>
    <string name="enter_inches">Enter Inches</string>
    <string name="language_preference">Language Preference</string>
</resources>