<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_16sdp"
    android:paddingTop="@dimen/_12sdp"
    android:paddingBottom="@dimen/_2sdp">

    <TextView
        android:id="@+id/tvHeight"
        style="@style/Form_Label_Style"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/height"
        tools:ignore="RtlSymmetry" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/llFeet"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.48"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etFeet"
                style="@style/Form_Input_Style_BG"
                android:layout_marginVertical="@dimen/_8sdp"
                android:hint="@string/enter_feet"
                android:inputType="number"
                android:maxLength="2"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_10sdp" />


        </LinearLayout>

        <View
            android:id="@+id/spaceView"
            android:layout_width="@dimen/_0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.04" />

        <LinearLayout
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.48"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etInches"
                style="@style/Form_Input_Style_BG"
                android:layout_marginVertical="@dimen/_8sdp"
                android:hint="@string/enter_inches"
                android:inputType="number"
                android:maxLength="2"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_10sdp" />

        </LinearLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/tvErrorMessage"
        style="@style/TextStyle_Error_14"
        android:visibility="gone" />

</LinearLayout>